[package]
name = "clush-server"
version = "0.1.0"
authors = ["BruceKangCN <BruceKangCN@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.22"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
fast_log= "1.3"
rbatis =  { version = "1.8" }
sha2 = "0.9"
