[package]
name = "clush-server"
version = "0.1.0"
authors = ["BruceKangCN <BruceKangCN@gmail.com>"]
edition = "2018"
categories = ["command-line-utilities"]
license = "MIT"
description = "a server for an IM software called clush"
repository = "http://github.com/BruceKangCN/clush-server.git"

[dependencies]
# asynchronous programming
tokio = { version = "1", features = ["full"] }
# tls support for tokio
tokio-rustls = "0.22"
# bytes utilities
bytes = "1"
# database connection
rbatis = { version = "1.8" }
# date&time utilities
chrono = { version = "0.4", features = ["serde"] }
# log utilities
fast_log = "1.3"
# other utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
